# neo

./: .clang-format  .gitignore  .pre-commit-config.yaml  Aligned.h  Allocator.h  Array.h  AsciiString.h  AsciiStringView.h  Assert.h  Atomic.h  Barrier.h  BinaryReader.h  BinaryWriter.h  Bitset.h  Buffer.h  BufferedStream.h  CMakeLists.txt  Checked.h  CircularBuffer.h  Concepts.h  ConcurrentStream.h  Directory.h  Error.h  File.h  FileStream.h  Function.h  Future.h  Generator.h  GenericLexer.h  Hashmap.h  IterableUtil.h  IterableUtilExtensionsFwdDecl.h  Iterator.h  Matrix.h  Memory.h  MemoryStream.h  MultidimensionalView.h  Mutex.h  NetworkStream.h  New.h  (+35 more)
.github/workflows/: c-cpp.yml
tests/: CMakeLists.txt  Test.h  asciistring_construct.cpp  asciistring_query_methods.cpp  asciistring_substring.cpp  asciistringview_construct.cpp  asciistringview_query_methods.cpp  asciistringview_substring.cpp  atomic.cpp  backtraces.cpp  file.cpp  file_test.cpp  future.cpp  generic_lexer.cpp  multidimensional_view.cpp  mutex.cpp  result_or_error_test.cpp  string_construct.cpp  string_query_methods.cpp  string_substring.cpp  stringbuilder.cpp  thread.cpp  tuple.cpp  variant.cpp  vector.cpp
