add_executable(asciistring_construct asciistring_construct.cpp)
    add_test(AsciiString - Construct asciistring_construct)
        add_executable(asciistring_substring asciistring_substring.cpp)
            add_test(AsciiString - Substring asciistring_substring)
                add_executable(asciistring_query_methods asciistring_query_methods.cpp)
                    add_test(AsciiString - Query - Methods asciistring_query_methods)
                        add_executable(string_construct string_construct.cpp)
                            add_test(String - Construct string_construct)
                                add_executable(string_substring string_substring.cpp)
                                    add_test(String - Substring string_substring)
                                        add_executable(string_query_methods string_query_methods.cpp)
                                            add_test(String - Query - Methods string_query_methods)
                                                add_executable(asciistringview_construct asciistringview_construct.cpp)
                                                    add_test(AsciiStringView - Construct asciistringview_construct)
                                                        add_executable(asciistringview_substring asciistringview_substring.cpp)
                                                            add_test(AsciiStringView - Substring asciistringview_substring)
                                                                add_executable(asciistringview_query_methods asciistringview_query_methods.cpp)
                                                                    add_test(AsciiStringView - Query - Methods asciistringview_query_methods)
                                                                        add_executable(file file_test.cpp)
                                                                            add_test(File file)
                                                                                add_executable(result_or_error result_or_error_test.cpp)
                                                                                    add_test(ResultOrError result_or_error)
