add_executable(string_construct string_construct.cpp)
add_test(String-Construct string_construct)
add_executable(string_substring string_substring.cpp)
add_test(String-Substring string_substring)
add_executable(string_query_methods string_query_methods.cpp)
add_test(String-Query-Methods string_query_methods)
add_executable(file file.cpp)
add_test(File file)
add_executable(result_or_error result_or_error_test.cpp)
add_test(ResultOrError result_or_error)
add_executable(stringbuilder stringbuilder.cpp)
add_test(StringBuilder stringbuilder)
add_executable(tuple tuple.cpp)
add_test(Tuple tuple)
add_executable(future future.cpp)
target_link_libraries(future pthread)
add_test(Future future)
add_executable(variant variant.cpp)
add_test(Variant variant)
add_executable(generic_lexer generic_lexer.cpp)
#add_test(GenericLexer generic_lexer)
add_executable(backtraces backtraces.cpp)
add_test(Backtraces backtraces)
add_executable(atomic atomic.cpp)
add_test(Atomic atomic)
target_link_libraries(atomic pthread)
add_executable(mutex mutex.cpp)
add_test(Mutex mutex)
target_link_libraries(mutex pthread)
include_directories(${CMAKE_SOURCE_DIR})
add_executable(vector vector.cpp)
#add_test(Vector vector)
add_executable(thread thread.cpp)
add_executable(multidimensional_view multidimensional_view.cpp)
add_test(MultidimensionalView multidimensional_view)
target_link_libraries(thread pthread)
add_test(Thread thread)
